# proleptic_utc_with_leap_seconds

./: #proleptic_UTC.tex.in#  16_BULLETIN_C16.txt  6_BULLETIN_A_V2013_016.txt  AUTHORS  ChangeLog  Makefile.am  Makefile.in  Makefile.old  NEWS  README  USNO_delta_T.csv  USNO_deltat_preds.csv  USNO_deltat_preds.ods  aclocal.m4  adssample.bib  astroads_ex.tex  build_RPMs.sh  build_all_xtics.sh  build_extraordinary_days_table.py  build_xtic_labels.py  build_xtic_monthly_labels.py  bulletinc-052.txt  calc_parabola.py  check_expected_output.txt  comb2000.eop  compute_JDN.ods  compute_NTP_timestamps.ods  configure  configure.ac  deltaT.ps  delta_T_projection_parameters.py  deltat.input  deltat_preds.ods  do_backup_downloads.sh  do_compare.sh  do_downloads.sh  download_bulletin_A.sh  eopc01.1900-now.dat.csv  eopc02.1830-now  extraordinary_days.dat.5  (+207 more)
chart5/: Makefile  chart_deltaT.py
different/: 16_BULLETIN_C16.txt  finals.all  finals.all.csv
previous/: 16_BULLETIN_C16.txt  finals.all  finals.all.csv
previous_downloads/: finals.all.csv
survey_UT2_slope/: Makefile  build_download_script.py  edit_DUT1_gnuplot_file.sh  edit_UT2_slope_gnuplot_file.sh  parse_bulletin_A.py  parse_bulletin_D.py  plot_DUT1.gnuplot.in  plot_UT2_slope.gnuplot.in
