#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([proleptic_utc_with_leap_seconds],[2020.04.18],[John_Sauter@systemeyescomputerstore.com])
AM_INIT_AUTOMAKE([tar-pax]) 
AC_CONFIG_SRCDIR([read_delta_t.py])
AM_MAINTAINER_MODE

# Checks for programs.
AM_PATH_PYTHON([3])

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

# Checks for system services.


AC_CONFIG_FILES([Makefile
	plot_extraordinary_days.gnuplot
	plot_extraordinary_days_since_1500.gnuplot
	plot_extraordinary_days_since_1600.gnuplot
	plot_extraordinary_days_since_1700.gnuplot
	plot_extraordinary_days_since_1800.gnuplot
	plot_extraordinary_days_since_1900.gnuplot
	plot_extraordinary_days_since_1950.gnuplot
	plot_extraordinary_days_since_2000.gnuplot
	plot_extraordinary_days_since_2015.gnuplot
	plot_extraordinary_days_since_2400.gnuplot
	plot_extraordinary_days_since_2490.gnuplot
	proleptic_UTC.tex
])
AC_OUTPUT

